refactor: switched from article to div element

--- a/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
+++ b/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
@@ -1,8 +1,8 @@
-<article>
+<div>
   <button *ngIf="selected" mat-icon-button (click)="toggleSelect('')" matTooltip="Reset selection" class="refresh_icon">
     <mat-icon svgIcon="refresh_filters"></mat-icon>
   </button>
-</article>
+</div>
 <ul>
   <li *ngFor="let card of cards">
     <button (click)="toggleSelect(card.title)" class="surface mat-body-2" [ngClass]="{ 'selected': card.selected, 'selectable': selectable }">
