--- a/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.scss
+++ b/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.scss
@@ -43,12 +43,12 @@ ul {
   border: 1px solid var(--primary);
 }
 
-.refresh_icon{
+.refresh_icon {
   display: block;
   margin-left: auto;
   margin-bottom: 16px;
 }
 
-article{
+div {
   min-height: 45px;
 }
