--- a/apps/crm/crm/src/app/crm/pages/users/users.component.html
+++ b/apps/crm/crm/src/app/crm/pages/users/users.component.html
@@ -38,14 +38,14 @@
         </a>
         <ng-template #noOrg>--</ng-template>
       </ng-template>
-      <ng-template colRef="firstConnection" [sort]="sorts.defaultSort"  label="First Connection" let-firstConnection>
+      <ng-template colRef="firstConnection" sort  label="First Connection" let-firstConnection>
         {{ firstConnection | date: 'mediumDate' }}
       </ng-template>
-      <ng-template colRef="lastConnection" [sort]="sorts.defaultSort" label="Last Connection" let-lastConnection>
+      <ng-template colRef="lastConnection" sort label="Last Connection" let-lastConnection>
         {{ lastConnection | date: 'mediumDate' }}
       </ng-template>
-      <ng-template colRef="pageView" label="Page View" [sort]="sorts.defaultSort" let-pageView>{{ pageView }}</ng-template>
-      <ng-template colRef="sessionCount" label="Session Count" [sort]="sorts.defaultSort" let-sessionCount>{{ sessionCount }}</ng-template>
+      <ng-template colRef="pageView" label="Page View" sort let-pageView>{{ pageView }}</ng-template>
+      <ng-template colRef="sessionCount" label="Session Count" sort let-sessionCount>{{ sessionCount }}</ng-template>
       <ng-template colRef="createdFrom" label="Created From" sort let-app>{{ app }}</ng-template>
       <ng-template colRef="org.addresses.main.country" sort label="Country" let-country>
         {{ country ? country : '--' }}
