--- a/libs/organization/src/lib/organization/components/card/card.component.html
+++ b/libs/organization/src/lib/organization/components/card/card.component.html
@@ -5,7 +5,22 @@
   <h5>{{ org | orgName }}</h5>
   <span class="mat-body-2">{{ (org.activity | toLabel: 'orgActivity') || "-" }}</span>
 </header>
-<mat-tab-group headerPosition="below" mat-align-tabs="center" [disablePagination]="true">
+<div *ngIf="hideIcons" class="tab-content">
+  <p class="mat-caption">{{ (org.addresses.main.country | toLabel: 'territories') || "-" }}</p>
+  <p class="mat-caption" i18n>
+    {{ org.userIds.length }} employee{ org.userIds.length, plural, =1 {} other {s} }
+  </p>
+</div>
+<mat-tab-group *ngIf="!hideIcons" headerPosition="below" mat-align-tabs="center" [disablePagination]="true">
+  <div class="tab-content">
+    <p class="mat-caption">{{ (org.addresses.main.country | toLabel: 'territories') || "-" }}</p>
+    <p class="mat-caption" i18n *ngIf="(orgMovieCount$ | async) as count">
+      {{ count }} film{ count, plural, =1 {} other {s} } in {{ app === 'catalog' ? 'catalog' : 'line-up' }}
+    </p>
+    <p class="mat-caption" i18n>
+      {{ org.userIds.length }} employee{ org.userIds.length, plural, =1 {} other {s} }
+    </p>
+  </div>
   <mat-tab>
     <ng-template mat-tab-label>
       <mat-icon svgIcon="account_circle"></mat-icon>
@@ -21,7 +36,7 @@
     </div>
   </mat-tab>
   <mat-tab>
-    <ng-template *ngIf="showMovieIcon" mat-tab-label>
+    <ng-template mat-tab-label>
       <mat-icon svgIcon="movie"></mat-icon>
     </ng-template>
     <!-- We want to use slice to be sure to have 3 elements/placeholders -->
