--- a/libs/ui/src/lib/dashboard/components/movie-table-actions/movie-table-actions.component.html
+++ b/libs/ui/src/lib/dashboard/components/movie-table-actions/movie-table-actions.component.html
@@ -1,14 +1,14 @@
-<a [routerLink]="movie.id" mat-icon-button matTooltip="View">
+<a [routerLink]="movie.id" mat-icon-button matTooltip="View Title">
   <mat-icon svgIcon="visibility"></mat-icon>
 </a>
-<a [routerLink]="['/c/o/dashboard/tunnel/movie', movie.id]" mat-icon-button matTooltip="Edit">
+<a [routerLink]="['/c/o/dashboard/tunnel/movie', movie.id]" mat-icon-button matTooltip="Edit Title">
   <mat-icon svgIcon="edit"></mat-icon>
 </a>
-<button *ngIf="movie.app[app].status === 'archived' else archive" type="button" mat-icon-button (click)="updateStatus(movie, 'draft', 'Title restored.')" matTooltip="Restore">
+<button *ngIf="movie.app[app].status === 'archived' else archive" type="button" mat-icon-button (click)="updateStatus(movie, 'draft', 'Title restored.')" matTooltip="Restore Title">
   <mat-icon svgIcon="restore"></mat-icon>
 </button>
 <ng-template #archive>
-  <button type="button" mat-icon-button (click)="updateStatus(movie, 'archived')" matTooltip="Archive">
+  <button type="button" mat-icon-button (click)="updateStatus(movie, 'archived')" matTooltip="Archive Title">
     <mat-icon svgIcon="archive"></mat-icon>
   </button>
 </ng-template>
