--- a/libs/user/src/lib/auth/components/widget/widget.component.html
+++ b/libs/user/src/lib/auth/components/widget/widget.component.html
@@ -13,7 +13,7 @@
       <overlay-widget #menu>
         <widget-card>
           <mat-nav-list>
-            <a mat-list-item routerLink="/c/o/account/profile">
+            <a mat-list-item routerLink="/c/o/account/profile" test-id="profile">
               <mat-icon matListIcon svgIcon="account_circle"></mat-icon>
               <span matLine>Profile</span>
             </a>
