--- a/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
+++ b/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
@@ -96,8 +96,8 @@
       <ng-template colRef="user" label="Name" let-user sort>
         <a [href]="'mailto:' + user?.email">{{ user | displayName }}</a>
       </ng-template>
-      <ng-template colRef="org.denomination.public" label="Company name" let-name sort>
-        {{ name }}
+      <ng-template colRef="org" label="Company name" let-org sort>
+        {{ org | orgName }}
       </ng-template>
       <ng-template colRef="pageView" label="Page views" let-pageView sort>
         {{ pageView ? pageView : '-' }}
