--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
@@ -23,8 +23,8 @@
   <ng-template colRef="user.email" label="Email" let-email sort>
     {{ email }}
   </ng-template>
-  <ng-template colRef="org.denomination.public" label="Company name" let-name sort>
-    {{ name }}
+  <ng-template colRef="org" label="Company name" let-org sort>
+    {{ org | orgName }}
   </ng-template>
   <ng-template colRef="org.activity" label="Activity" let-activity sort>
     {{ activity | toLabel:'orgActivity' }}
