--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -99,8 +99,8 @@
             <ng-template colRef="user.email" label="Email" let-email sort>
               {{ email }}
             </ng-template>
-            <ng-template colRef="org.denomination.public" label="Company name" let-name sort>
-              {{ name }}
+            <ng-template colRef="org" label="Company name" let-org sort>
+              {{ org | orgName }}
             </ng-template>
             <ng-template colRef="org.addresses.main.country" label="Country" let-country sort [filter]="filters.territories">
               {{ country | toLabel:'territories' }}
