--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -125,7 +125,10 @@
             </ng-template>
           </bf-table>
 
-          <a mat-button class="link_buttons" routerLink="buyer">View All Buyers' Activities</a>
+          <a mat-button class="link_buttons" routerLink="buyer">
+            <span>View All Buyers' Activities</span>
+            <mat-icon svgIcon="arrow_forward"></mat-icon>
+          </a>
         </section>
       </ng-container>
     </ng-container>
