--- a/libs/analytics/src/lib/components/bar-chart/bar-chart.component.html
+++ b/libs/analytics/src/lib/components/bar-chart/bar-chart.component.html
@@ -1,6 +1,6 @@
 <header>
   <mat-icon svgIcon="movie"></mat-icon>
-  <h5>Buyer was interested in these titles</h5>
+  <h5>Buyer was interested in these Titles</h5>
 </header>
 <ng-content select="p"></ng-content>
 
