--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -54,8 +54,8 @@
     <ng-template colRef="user.email" label="Email address" let-email sort>
       {{ email }}
     </ng-template>
-    <ng-template colRef="org.denomination.public" label="Company name" let-name sort>
-      {{ name }}
+    <ng-template colRef="org" label="Company name" let-org sort>
+      {{ org | orgName }}
     </ng-template>
     <ng-template colRef="org.activity" label="Activity" let-activity sort [filter]="filters.orgActivity">
       {{ activity | toLabel:'orgActivity' }}
@@ -106,7 +106,7 @@
     </ng-container>
   </header>
   <article class="surface">
-    <p>"O" meaning the user left the screening right away.</p>
+    <p>"0" means the user left the screening right away.</p>
     <analytics-metric-card-list [cards]="aggregatedScreeningCards$ | async"></analytics-metric-card-list>
     <ng-container *ngIf="invitations$ | async as invitations">
       <header>
