--- a/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
+++ b/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="selectable">
   <button *ngIf="selected" mat-icon-button (click)="toggleSelect('')" matTooltip="Reset selection" class="refresh_icon">
     <mat-icon svgIcon="refresh_filters"></mat-icon>
   </button>
