--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -5,7 +5,7 @@
 
   <ng-container *ngIf="title$ | async as title">
     <article fxLayout fxLayoutGap="24px">
-      <a [routerLink]="['/c/o/marketplace/title/', title.id]">
+      <a [routerLink]="['/c/o/dashboard/title/', title.id]">
         <img fxHide.lt-md [ref]="title.poster" asset="empty_poster.svg" alt="Movie Poster" class="poster">
       </a>
 
@@ -13,7 +13,7 @@
         <p class="mat-body-1">{{ title.directors | displayName }}</p>
         <div fxLayout fxLayoutAlign="space-between">
           <h1 class="mat-display-1">{{ title.title.international }}</h1>
-          <a mat-button [routerLink]="['/c/o/marketplace/title/', title.id]" class="film-page-button">See Film Page</a>
+          <a mat-button [routerLink]="['/c/o/dashboard/title/', title.id]" class="film-page-button">See Film Page</a>
         </div>
         <h6>{{ title.genres | toLabel: 'genres' }}</h6>
       </div>
