--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -5,7 +5,7 @@
 
   <ng-container *ngIf="user$ | async as user">
     <article>
-      <img [ref]="user.org.logo" asset="empty_organization.svg" type="logo" alt="Organization Logo">
+      <img [ref]="user.org.logo" asset="profil_user.svg" type="logo" alt="Organization Logo">
 
       <div>
         <h4>{{ user | displayName }}</h4>
