--- a/libs/movie/src/lib/movie/components/header/header.component.scss
+++ b/libs/movie/src/lib/movie/components/header/header.component.scss
@@ -6,7 +6,7 @@ header {
   background-size: cover;
 
   .overlay {
-    padding: 48px 24px 48px 24px;
+    padding: 48px 24px;
     background-image: linear-gradient(to right, black, transparent);
 
     .movie-info{
