change from promo reels/elements to video plays

--- a/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
+++ b/apps/crm/crm/src/app/crm/pages/movie/movie.component.html
@@ -102,8 +102,8 @@
       <ng-template colRef="pageView" label="Page views" let-pageView sort>
         {{ pageView ? pageView : '-' }}
       </ng-template>
-      <ng-template colRef="promoReelOpened" label="Promo reels" let-promoReelOpened sort>
-        {{ promoReelOpened ? promoReelOpened : '-' }}
+      <ng-template colRef="promoReelOpened" label="Video Plays" let-videoPlays sort>
+        {{ videoPlays ? videoPlays : '-' }}
       </ng-template>
       <ng-template colRef="addedToWishlist" label="In wishlist" let-wishlist sort>
         {{ wishlist ? wishlist : '-' }}
