--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -54,8 +54,8 @@
       <ng-template colRef label="In wishlist" let-wishlist sort>
         {{ inWishlist(wishlist) ? 'Yes' : '-' }}
       </ng-template>
-      <ng-template colRef="promoReelOpened" label="Promotional Elements" let-promoReelOpened sort>
-        {{ promoReelOpened }}
+      <ng-template colRef="promoReelOpened" label="Video Plays" let-videoPlays sort>
+        {{ videoPlays }}
       </ng-template>
       <ng-template colRef="screeningRequested" label="Screening Requests" let-screeningRequested sort>
         {{ screeningRequested }}
