--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -114,8 +114,8 @@
             <ng-template colRef="addedToWishlist" label="Titles in Wishlist" let-wishlist sort>
               {{ wishlist }}
             </ng-template>
-            <ng-template colRef="promoReelOpened" label="Promotional Elements" let-promoReelOpened sort>
-              {{ promoReelOpened }}
+            <ng-template colRef="promoReelOpened" label="Video Plays" let-videoPlays sort>
+              {{ videoPlays }}
             </ng-template>
             <ng-template colRef="screeningRequested" label="Screening Requests" let-screeningRequested sort>
               {{ screeningRequested }}
