Update style and code

--- a/libs/movie/src/lib/movie/form/summary/review/review.component.scss
+++ b/libs/movie/src/lib/movie/form/summary/review/review.component.scss
@@ -17,3 +17,10 @@ a.mat-icon-button {
   height: 32px;
   width: 32px;
 }
+
+.review-items {
+  margin-bottom: 8px;
+  div {
+    margin-left: 24px;
+  }
+}
