--- a/libs/movie/src/lib/movie/form/summary/review/review.component.html
+++ b/libs/movie/src/lib/movie/form/summary/review/review.component.html
@@ -87,12 +87,17 @@
     <missing-control [control]="movie.review" [link]="link" fragment="reviews">
       <ng-template let-reviews="control">
         <ng-container *ngFor="let review of reviews.controls">
-          <li>
+          <li class="review-items">
             <strong>
               <missing-control [control]="review.get('journalName')" [link]="link" fragment="reviews"></missing-control>
             </strong>
-            <ol><strong>Link - </strong><missing-control [control]="review.get('revueLink')" fragment="reviews"></missing-control></ol>
-            <ol><strong>Quote - </strong>"<missing-control [control]="review.get('criticQuote')" [link]="link" fragment="reviews"></missing-control>"</ol>
+
+            <div>
+              <strong>Link: </strong><missing-control [control]="review.get('revueLink')" fragment="reviews"></missing-control>
+            </div>
+            <div>
+              <strong>Quote: </strong>"<missing-control [control]="review.get('criticQuote')" [link]="link" fragment="reviews"></missing-control>"
+            </div>
           </li>
         </ng-container>
       </ng-template>
