refactor: called exist method and changed h4 title

--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -80,7 +80,8 @@
           >
             <mat-icon class="title_margin" svgIcon="buyer_insights"></mat-icon>
             <h3 class="title_margin">Buyers' Insights</h3>
-            <h4 listTitle>TOP 5 COUNTRIES</h4>
+            <!-- #8696 h4 should be "TOP 5 COUNTRIES" line 76 above -->
+            <h4 listTitle>TOP COUNTRIES</h4>
           </analytics-map>
 
           <h3 #tableTitle>Most Active Buyers</h3>
