update after review

--- a/libs/organization/src/lib/organization/components/card/card.component.html
+++ b/libs/organization/src/lib/organization/components/card/card.component.html
@@ -5,13 +5,13 @@
   <h5>{{ org | orgName }}</h5>
   <span class="mat-body-2">{{ (org.activity | toLabel: 'orgActivity') || "-" }}</span>
 </header>
-<div *ngIf="hideIcons">
+<div *ngIf="hideTabs">
   <p class="mat-caption">{{ (org.addresses.main.country | toLabel: 'territories') || "-" }}</p>
   <p class="mat-caption" i18n>
     {{ org.userIds.length }} employee{ org.userIds.length, plural, =1 {} other {s} }
   </p>
 </div>
-<mat-tab-group *ngIf="!hideIcons" headerPosition="below" mat-align-tabs="center" [disablePagination]="true">
+<mat-tab-group *ngIf="!hideTabs" headerPosition="below" mat-align-tabs="center" [disablePagination]="true">
   <mat-tab>
     <ng-template mat-tab-label>
       <mat-icon svgIcon="account_circle"></mat-icon>
