--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -1,4 +1,4 @@
-<header class="dark-contrast-theme main" bgAsset="background_header.png" bgTheme="dark">
+<header #header class="dark-contrast-theme main" bgAsset="background_header.png" bgTheme="dark">
   <button mat-icon-button (click)="goBack()">
     <mat-icon svgIcon="arrow_back"></mat-icon>
   </button>
