--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -113,7 +113,7 @@
         <h5>Attendees</h5>
         <button mat-button color="primary" [disabled]="!invitations.length" (click)="exportScreenerAnalytics()">Export to .CSV</button>
       </header>
-      <bf-table class="screenings" [source]="invitations" clickable useFilter pagination="5">
+      <bf-table class="screenings" [source]="invitations" clickable useFilter pagination="5" (rowClick)="goToBuyer($event)">
         <ng-template colRef label="Name" let-invitation="item" sort defaultSort [filter]="filters.name">
           <b>{{ invitation | guest:'user' | displayName }}</b>
         </ng-template>
