add lorem ipsum in waitting the good text

--- a/libs/event/src/lib/explanation/explanation.component.html
+++ b/libs/event/src/lib/explanation/explanation.component.html
@@ -5,13 +5,13 @@
     <mat-tab-group>
       <mat-tab label="Screening">
         <ng-template matTabContent>
-          <p><strong>Screening</strong> view will show the territories that are available according to your search on a map. You just need to point out the dates, terms and exclusivity you need.</p>
+          <p><strong>Screening</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis augue vel ligula porttitor, sed ultrices tellus tincidunt. Donec nec lobortis nibh, et faucibus libero.</p>
           <video controls src="assets/videos/screening_set_up.mp4"></video>
         </ng-template>
       </mat-tab>
       <mat-tab label="Meeting">
         <ng-template matTabContent>
-          <p><strong>Meeting</strong> view will show the calendar with availabilities for the territories and rights you've pointed out. Just select the start and end date and your term will be created.</p>
+          <p><strong>Meeting</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis augue vel ligula porttitor, sed ultrices tellus tincidunt. Donec nec lobortis nibh, et faucibus libero.</p>
           <video controls src="assets/videos/meeting_set_up.mp4"></video>
         </ng-template>
       </mat-tab>
