--- a/libs/event/src/lib/explanation/explanation.component.html
+++ b/libs/event/src/lib/explanation/explanation.component.html
@@ -17,7 +17,7 @@
       </mat-tab>
     </mat-tab-group>
 
-    <div mat-dialog-actions fxLayout="column" class="actions">
+    <div mat-dialog-actions class="actions">
       <button mat-flat-button color="primary" (click)="close()">GOT IT!</button>
       <button mat-button color="primary" (click)="openIntercom()">
         Ask a question
