--- a/libs/ui/src/lib/static-autocomplete/group/group.component.html
+++ b/libs/ui/src/lib/static-autocomplete/group/group.component.html
@@ -6,7 +6,7 @@
         <mat-checkbox color="primary" [indeterminate]="(value | getMode:groups) === 'indeterminate'"
           [checked]="(value | getMode:groups) === 'checked'" (change)="checkAll($event.checked)" test-id="checked-all">
         </mat-checkbox>
-        <input #inputEl class="mat-input-element" [placeholder]="placeholder" [formControl]="search" test-id="search-input-control" />
+        <input (keydown)="$event.code === 'Space' ? $event.stopPropagation() : '' " #inputEl class="mat-input-element" [placeholder]="placeholder" [formControl]="search" test-id="search-input-control" />
         <mat-icon *ngIf="!search.value" svgIcon="search"></mat-icon>
         <button *ngIf="search.value" mat-icon-button type="button" (click)="search.reset()" matTooltip="Clear text">
           <mat-icon svgIcon="refresh"></mat-icon>
