--- a/libs/event/src/lib/form/shell/shell.component.scss
+++ b/libs/event/src/lib/form/shell/shell.component.scss
@@ -37,6 +37,10 @@ mat-spinner {
   margin-top: 48px;
 }
 
-.explanation{
+.explanation {
   margin-inline-start: auto;
+}
+
+.container-nav-button {
+  display: flex;
 }
