--- a/libs/event/src/lib/form/shell/shell.component.html
+++ b/libs/event/src/lib/form/shell/shell.component.html
@@ -33,16 +33,18 @@
       <event-details-edit [form]="form" showPrivacy></event-details-edit>
     </mat-card>
 
-    <nav mat-tab-nav-bar>
-      <ng-container *ngFor="let tab of (tabs$ |async)">
-        <a mat-tab-link [routerLink]="tab.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
-          {{ tab.label }}</a>
-      </ng-container>
-      <button mat-button class="explanation" (click)="explain()">
+    <div class="container-nav-button">
+      <nav mat-tab-nav-bar>
+        <ng-container *ngFor="let tab of (tabs$ |async)">
+          <a mat-tab-link [routerLink]="tab.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
+            {{ tab.label }}</a>
+        </ng-container>
+      </nav>
+      <button mat-button (click)="explain()">
         <mat-icon svgIcon="info"></mat-icon>
         <span>Learn how it works</span>
       </button>
-    </nav>
+    </div>
   </form>
 
   <div class="routerContainer" [@routeAnimation]="animationOutlet(outlet)">
