put button 'how it  works' for screening and meeting

--- a/libs/event/src/lib/form/shell/shell.component.html
+++ b/libs/event/src/lib/form/shell/shell.component.html
@@ -32,15 +32,15 @@
       </section>
       <event-details-edit [form]="form" showPrivacy></event-details-edit>
     </mat-card>
-
     <div class="container-nav-button">
       <nav mat-tab-nav-bar>
         <ng-container *ngFor="let tab of (tabs$ |async)">
           <a mat-tab-link [routerLink]="tab.path" routerLinkActive #rla="routerLinkActive" [active]="rla.isActive">
-            {{ tab.label }}</a>
+            {{ tab.label }}
+          </a>
         </ng-container>
       </nav>
-      <button mat-button (click)="explain()">
+      <button *ngIf="form.value.type !== 'slate'" mat-button (click)="explain()">
         <mat-icon svgIcon="info"></mat-icon>
         <span>Learn how it works</span>
       </button>
