--- a/libs/event/src/lib/form/shell/shell.component.scss
+++ b/libs/event/src/lib/form/shell/shell.component.scss
@@ -37,10 +37,7 @@ mat-spinner {
   margin-top: 48px;
 }
 
-.explanation {
-  margin-inline-start: auto;
-}
-
 .container-nav-button {
   display: flex;
+  place-content: space-between;
 }
