remove css in the HTML for 'how it works' on avails

--- a/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.html
@@ -1,5 +1,5 @@
 <global-modal>
-  <section fxlayout="column" fxLayoutGap="32px">
+  <section>
     <h1>How It Works</h1>
 
     <mat-tab-group>
@@ -17,7 +17,7 @@
       </mat-tab>
     </mat-tab-group>
 
-    <div mat-dialog-actions fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px" class="actions">
+    <div mat-dialog-actions class="actions">
       <button mat-flat-button color="primary" (click)="close()">GOT IT!</button>
       <button mat-button color="primary" (click)="openIntercom()">
         Ask a question
