--- a/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.scss
@@ -1,3 +1,7 @@
+section{
+  margin-right: 32px;
+}
+
 h1 {
   text-align: center;
 }
@@ -8,7 +12,11 @@ p {
 }
 
 .actions {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   margin-top: 32px;
+  gap: 16px;
 }
 
 video {
