--- a/libs/event/src/lib/form/shell/shell.component.html
+++ b/libs/event/src/lib/form/shell/shell.component.html
@@ -3,22 +3,22 @@
     <header fxLayout fxLayoutAlign="space-between center">
       <div fxLayout fxLayoutGap="40px">
         <a mat-icon-button routerLink="../.." [queryParams]="{date: form.value.start.toISOString()}">
-          <mat-icon svgIcon="arrow_back"></mat-icon>
+          <mat-icon svgIcon="arrow_back" test-id="arrow-back"></mat-icon>
         </a>
         <mat-chip-list fxLayoutAlign="center center">
-          <mat-chip disableRipple *ngIf="errorChipMessage">
+          <mat-chip disableRipple *ngIf="errorChipMessage" test-id="warning-chip">
             <mat-icon svgIcon="warning"></mat-icon>
             <span>{{errorChipMessage}}</span>
           </mat-chip>
         </mat-chip-list>
       </div>
       <div fxLayout fxLayoutAlign="end center" fxLayoutGap="8px">
-        <button type="button" mat-button color="warn" (click)="remove()">Delete</button>
+        <button type="button" mat-button color="warn" (click)="remove()" test-id="event-delete">Delete</button>
         <ng-container *ngIf="form.dirty else disabled">
           <button type="submit" mat-stroked-button color="primary" (click)="save()" test-id="event-save">Save</button>
         </ng-container>
         <ng-template #disabled>
-          <button mat-button disabled>Save</button>
+          <button mat-button disabled test-id="event-save-disabled">Save</button>
         </ng-template>
       </div>
     </header>
