--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -104,8 +104,8 @@
         <ng-template colRef="analytics.length" label="Screening Requests" let-requests sort>
           {{ requests }}
         </ng-template>
-        <ng-template colRef="watchTime" label="Watch Time" let-watchTime>
-          {{ watchTime * 1000 | duration: '0min' }}
+        <ng-template colRef="watchTime" label="Watch Time" let-watchTime sort>
+          {{ watchTime * 1000 | duration: '0s' }}
         </ng-template>
       </bf-table>
     </article>
