--- a/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.html
@@ -1,7 +1,5 @@
 <global-modal>
-  <section>
     <h1>How It Works</h1>
-
     <mat-tab-group>
       <mat-tab label="Multi-territories">
         <ng-template matTabContent>
@@ -16,12 +14,10 @@
         </ng-template>
       </mat-tab>
     </mat-tab-group>
-
-    <div mat-dialog-actions class="actions">
+    <div mat-dialog-actions>
       <button mat-flat-button color="primary" (click)="close()">GOT IT!</button>
       <button mat-button color="primary" (click)="openIntercom()">
         Ask a question
       </button>
     </div>
-  </section>
 </global-modal>
