--- a/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.scss
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.scss
@@ -1,7 +1,3 @@
-section{
-  margin-right: 32px;
-}
-
 h1 {
   text-align: center;
 }
@@ -11,7 +7,7 @@ p {
   margin: 32px 0;
 }
 
-.actions {
+div {
   display: flex;
   flex-flow: column;
   align-items: center;
