--- a/libs/event/src/lib/components/explanation/explanation.component.html
+++ b/libs/event/src/lib/components/explanation/explanation.component.html
@@ -1,14 +1,18 @@
 <global-modal>
   <h1>How It Works</h1>
-  <ng-container *ngIf="data.type === 'screening'; else meeting">
+  <ng-container *ngIf="data.type === 'screening'">
     <p><strong>Screening</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis augue vel ligula porttitor, sed ultrices tellus tincidunt. Donec nec lobortis nibh, et faucibus libero.</p>
     <video controls src="assets/videos/screening_set_up.mp4"></video>    
   </ng-container>
-  <ng-template #meeting>
+  <ng-container *ngIf="data.type === 'meeting'">
     <p><strong>Meeting</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis augue vel ligula porttitor, sed ultrices tellus tincidunt. Donec nec lobortis nibh, et faucibus libero.</p>
     <video controls src="assets/videos/meeting_set_up.mp4"></video>
-  </ng-template>
-  <div mat-dialog-actions class="actions">
+  </ng-container>  
+  <ng-container *ngIf="data.type === 'slate'">
+    <p><strong>Slate Presentation</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis augue vel ligula porttitor, sed ultrices tellus tincidunt. Donec nec lobortis nibh, et faucibus libero.</p>
+    <video controls src=""></video>
+  </ng-container>
+  <div mat-dialog-actions>
     <button mat-flat-button color="primary" (click)="close()">GOT IT!</button>
     <button mat-button color="primary" (click)="openIntercom()">
       Ask a question
