landing test for each app

--- a/apps/festival/festival/src/app/landing/landing.component.html
+++ b/apps/festival/festival/src/app/landing/landing.component.html
@@ -2,7 +2,7 @@
 
   <app-bridge-banner></app-bridge-banner>
 
-  <landing-header>
+  <landing-header test-id="landing-festival">
     <header id="header-to-scroll" class="max-width">
       <span class="mat-subheading-1">WELCOME TO ARCHIPEL MARKET</span>
       <h1 class="mat-display-2">The ongoing<br />film market</h1>
@@ -64,7 +64,7 @@
             </ng-container>
           </article>
         </mat-tab>
-        
+
         <mat-tab [label]="tabNames[1]">
           <header fxLayout fxLayoutGap="48px" fxLayout.lt-lg="column">
             <img [asset]="tabTitle[1].imgAsset" alt="buyer image">
