--- a/apps/financiers/financiers/src/app/landing/landing.component.html
+++ b/apps/financiers/financiers/src/app/landing/landing.component.html
@@ -1,6 +1,6 @@
 <landing-shell-page [roles]="userRoles">
 
-  <landing-header>
+  <landing-header test-id="landing-financiers">
     <header class="max-width">
       <h4>Welcome to Media Financiers</h4>
       <p class="mat-display-2 p-margin">The professional financing hub <br /> for films and TV series</p>
