--- a/apps/catalog/catalog/src/app/landing/landing.component.html
+++ b/apps/catalog/catalog/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <landing-shell-page>
   <app-bridge-banner></app-bridge-banner>
 
-  <landing-header>
+  <landing-header test-id="landing-catalog">
     <header id="header-to-scroll" class="max-width">
       <h4>Welcome to Archipel Content</h4>
       <h1 class="mat-display-2">The matchmaker<br/>for content licensing</h1>
@@ -49,7 +49,7 @@
         </mat-tab>
 
         <mat-tab [label]="tabNames[1]">
-           <header fxLayout fxLayoutGap="48px" fxLayout.lt-lg="column" fxLayoutGap="32px">
+          <header fxLayout fxLayoutGap="48px" fxLayout.lt-lg="column" fxLayoutGap="32px">
             <video #buyerVideo [muted]="true" autoplay loop src="assets/videos/buyerLP.mp4" type="video/mp4"></video>
             <div>
               <h2>{{ tabTitle[1].title }}</h2>
@@ -80,7 +80,7 @@
         </mat-tab>
       </mat-tab-group>
     </section>
-    
+
     <section fxLayout="column" fxLayoutAlign="start center" class="dark-contrast-theme join" fxLayoutGap="40px">
       <h2 class="mat-display-2">Subscribe for free!</h2>
       <p>We take 10% commission when there is a deal</p>
@@ -114,7 +114,7 @@
       <p class="mat-body-1">Check out Archipel Market, the ongoing film market!</p>
       <a mat-flat-button color="primary" [href]="applicationUrl.festival" target="_blank">
         Switch to Archipel Market
-      </a>  
+      </a>
     </section>
   </landing-app-link>
 </landing-shell-page>
