--- a/apps/crm/crm/src/app/landing/pages/landing-page/landing-page.component.html
+++ b/apps/crm/crm/src/app/landing/pages/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <landing-shell-page>
-  <landing-header class="dark-contrast-theme">
+  <landing-header class="dark-contrast-theme" test-id="landing-crm">
     <h4>Welcome to Blockframes CRM</h4>
   </landing-header>
 
