--- a/apps/festival/festival/src/app/event/role/role.component.html
+++ b/apps/festival/festival/src/app/event/role/role.component.html
@@ -1,16 +1,23 @@
-<a app-logo routerLink="/"></a>
-<div class="surface">
-  <h1>Welcome</h1>
-  <h2>to the Archipel Market Platform</h2>
-  <p class="mat-body-1">You are here as a:</p>
-  <div fxLayout fxLayoutGap="80px">
-    <button color="warn" (click)="update('organizer')">
-      <img [asset]="'event_organizer.svg'" alt="organizer image">
-      <h5>Organizer</h5>
-    </button>
-    <button color="primary" (click)="update('guest')">
-      <img [asset]="'event_guest.svg'" alt="guest image">
-      <h5>Guest</h5>
-    </button>
-  </div>
-</div>
+<main>
+  <section>
+    <a app-logo routerLink="/"></a>
+    <div class="surface">
+      <h1>Welcome</h1>
+      <h2>to the Archipel Market Platform</h2>
+      <p class="mat-body-1">You are here as a:</p>
+      <div fxLayout fxLayoutGap="80px"  fxLayout.xs="column" fxLayoutGap.xs="40px" fxLayoutAlign.xs="center center">
+        <button color="warn" (click)="update('organizer')">
+          <img [asset]="'event_organizer.svg'" alt="organizer image">
+          <h5>Organizer</h5>
+        </button>
+
+        <mat-divider fxHide fxShow.xs></mat-divider>
+
+        <button color="primary" (click)="update('guest')">
+          <img [asset]="'event_guest.svg'" alt="guest image">
+          <h5>Guest</h5>
+        </button>
+      </div>
+    </div>
+  </section>
+</main>
