Add the explanation text

--- a/libs/event/src/lib/components/explanation/explanation.component.html
+++ b/libs/event/src/lib/components/explanation/explanation.component.html
@@ -1,11 +1,17 @@
 <global-modal>
   <h1>How It Works</h1>
   <ng-container *ngIf="data.type === 'screening'">
-    <p><strong>Screening</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis augue vel ligula porttitor, sed ultrices tellus tincidunt. Donec nec lobortis nibh, et faucibus libero.</p>
+    <p>
+      To organize a <strong>Screening</strong> on our platform, you need to set up the privacy settings (choose who will be able to access your Screening) and how much time your Screening will be active. 
+      You are also able to invite guests to your Screening and consult the attendance statistics in real time.
+    </p>
     <video controls src="assets/videos/screening_set_up.mp4"></video>    
   </ng-container>
   <ng-container *ngIf="data.type === 'meeting'">
-    <p><strong>Meeting</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc convallis augue vel ligula porttitor, sed ultrices tellus tincidunt. Donec nec lobortis nibh, et faucibus libero.</p>
+    <p>
+      To organize a <strong>Meeting</strong> on our platform, you need to set up the privacy settings (choose who will be able to access your Meeting) and the time of your event. 
+      Also, during the creation of your Meeting you can invite your collaborators and add the the files that you would like to share during your Meeting (line-ups, promo reels etc.)
+    </p>
     <video controls src="assets/videos/meeting_set_up.mp4"></video>
   </ng-container>  
   <ng-container *ngIf="data.type === 'slate'">
