Event - Add "Learn how it works" (#8709)
* Create explanation component for event

* add video

* use explanation component

* add lorem ipsum in waitting the good text

* remove last fxLayout

* fix review

* put button 'how it  works' for screening and meeting

* set 'how it works' according the current event

* remove css in the HTML for 'how it works' on avails

* remove extra line

* remove 'FlexLayoutModule'

* fix review

* fix review, move it into 'component' folder

* fix review, remove unused modules

* fix indent

* fix review

* Add the explanation text

* remove 'Slate' from explaination

Co-authored-by: kevin-m <kmarais@cascadae8.com>
Co-authored-by: Bruce <eelios@gmail.com>

--- a/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.html
@@ -1,27 +1,23 @@
 <global-modal>
-  <section fxlayout="column" fxLayoutGap="32px">
-    <h1>How It Works</h1>
-
-    <mat-tab-group>
-      <mat-tab label="Multi-territories">
-        <ng-template matTabContent>
-          <p><strong>Multi-territories</strong> view will show the territories that are available according to your search on a map. You just need to point out the dates, terms and exclusivity you need.</p>
-          <video controls src="assets/videos/learn_map.mp4"></video>
-        </ng-template>
-      </mat-tab>
-      <mat-tab label="Single-territory">
-        <ng-template matTabContent>
-          <p><strong>Single-territory</strong> view will show the calendar with availabilities for the territories and rights you've pointed out. Just select the start and end date and your term will be created.</p>
-          <video controls src="assets/videos/learn_calendar.mp4"></video>
-        </ng-template>
-      </mat-tab>
-    </mat-tab-group>
-
-    <div mat-dialog-actions fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px" class="actions">
-      <button mat-flat-button color="primary" (click)="close()">GOT IT!</button>
-      <button mat-button color="primary" (click)="openIntercom()">
-        Ask a question
-      </button>
-    </div>
-  </section>
+  <h1>How It Works</h1>
+  <mat-tab-group>
+    <mat-tab label="Multi-territories">
+      <ng-template matTabContent>
+        <p><strong>Multi-territories</strong> view will show the territories that are available according to your search on a map. You just need to point out the dates, terms and exclusivity you need.</p>
+        <video controls src="assets/videos/learn_map.mp4"></video>
+      </ng-template>
+    </mat-tab>
+    <mat-tab label="Single-territory">
+      <ng-template matTabContent>
+        <p><strong>Single-territory</strong> view will show the calendar with availabilities for the territories and rights you've pointed out. Just select the start and end date and your term will be created.</p>
+        <video controls src="assets/videos/learn_calendar.mp4"></video>
+      </ng-template>
+    </mat-tab>
+  </mat-tab-group>
+  <div mat-dialog-actions>
+    <button mat-flat-button color="primary" (click)="close()">GOT IT!</button>
+    <button mat-button color="primary" (click)="openIntercom()">
+      Ask a question
+    </button>
+  </div>
 </global-modal>
